change at 11_24_am

--- a/user_registration.html
+++ b/user_registration.html
@@ -63,17 +63,17 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-7 text-center heading-section ftco-animate fadeInUp ftco-animated">
-                    <h2 class="mb-3">Vendor Registration Form</h2>
+                    <h2 class="mb-3">User Registration Form</h2>
                 </div>
             </div>
         </div>
         <div class="container">
             <form class="vendor_register_form" method="post" action="">
                 <div class="form-group">
-                    <label for="exampleInputEmail1">Company Name</label>
-                    <input type="text" class="form-control company_name" id="company_name"
-                        placeholder="Enter your company name" name="company_name" data-parsley-required
-                        data-parsley-required-message="Please insert your company name">
+                    <label for="exampleInputEmail1">User Name</label>
+                    <input type="text" class="form-control user_name" id="user_name"
+                        placeholder="Enter your name" name="user_name" data-parsley-required
+                        data-parsley-required-message="Please insert your name">
                 </div>
                 <div class="form-group">
                     <label for="exampleInputPassword1">Contact Person</label>
