--- a/vendor_register.html
+++ b/vendor_register.html
@@ -110,6 +110,7 @@
                         <option value="adhar_card">Adhar Card</option>
                         <option value="driving_licence">Driving Licence</option>
                         <option value="voter_id">Voter Id</option>
+                        <option value="passport">Passport</option>
                     </select>
                 </div>
                 <div class="form-group">
