--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
               Login
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#scrollspyHeading3">User Login</a></li>
-              <li><a class="dropdown-item" href="#scrollspyHeading4">Vendor Login</a></li>
+              <li><a class="dropdown-item" href="login.html?role=user">User Login</a></li>
+              <li><a class="dropdown-item" href="login.html?role=vendor">Vendor Login</a></li>
             </ul>
           </li>
         </ul>
