--- a/vendor_register.html
+++ b/vendor_register.html
@@ -73,7 +73,8 @@
                     <label for="exampleInputEmail1">Company Name</label>
                     <input type="text" class="form-control company_name" id="company_name"
                         placeholder="Enter your company name" name="company_name" data-parsley-required
-                        data-parsley-required-message="Please insert your company name">
+                        data-parsley-required-message="Please insert your company name"
+                        >
                 </div>
                 <div class="form-group">
                     <label for="exampleInputPassword1">Contact Person</label>
@@ -100,7 +101,9 @@
                     <label for="company_description">Company Description</label>
                     <textarea class="form-control company_description" id="company_description" rows="3"
                     data-parsley-required data-parsley-required-message="Please enter a description about your company"
+                    data-parsley-errors-container=".description_error_list" 
                     ></textarea>
+                    <p class="description_error_list"></p>
                   </div>
                 <div class="form-group">
                     <label for="exampleFormControlSelect1">Please Select a Id Proof</label>
@@ -133,7 +136,7 @@
                 </div>
                 <div class="form-group">
                     <label for="password">Retype Password</label>
-                    <input type="text" class="form-control password" id="password"
+                    <input type="text" class="form-control rpassword" id="rpassword"
                         placeholder="Enter your password again" data-parsley-required
                         data-parsley-required-message="Please enter your password again"
                         data-parsley-equalto="#password" data-parsley-equalto-message="Please type the same password"
@@ -207,7 +210,7 @@
                         Copyright &copy;
                         <script>document.write(new Date().getFullYear());</script> All rights reserved | This template
                         is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a
-                            href="https://colorlib.com" target="_blank">Colorlib</a>
+                            href="#" target="_blank">Hithin</a>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     </p>
                 </div>
